Fixed overflow x

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,13 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+html {
+  overflow-x: hidden;
+
 }
